# icd11-playground

./: .gitignore  CLAUDE.md  README.md  config.toml  docker-compose.yml  icd11-api-exploration-instructions.md  icd11-playground-readme.md  icd11-visual-interface-spec.md
.github/workflows/: deploy.yml
ICD-11-notes/: Email with Chris 2026-01-16.md  questions.md
ICD-11-notes/.obsidian/: app.json
ICD-11-notes/papers/: README.md  harrison-2021-ICD-11.md  harrison-2021-three-part-model.md  mabon-2022-postcoordination.md
analysis/: .gitignore  analyze.py  crawl.py  pyproject.toml
api/: config.py  icd_client.py  main.py  pyproject.toml
archive/: config.toml  icd11-api-exploration-instructions.md  react-ect-exploration-instructions.md
archive/api/: auth.py  config.py
archive/python-api-exploration/: .gitignore  auth.py  client.py  run.py
design-stuff/: pill-sketch.html
notes/: learning-goals.md  questions.md
notes/.obsidian/: workspace.json
notes/concepts/: README.md
notes/explorations/: README.md
notes/papers/: README.md  chute-celik-2022-architecture.md  cimino-2012-desiderata.md  drosler-2021-extension-codes.md  forster-2023-patient-safety.md  (+4 more)
papers/: README.md
python-api-exploration/: __init__.py  cache.py  config.py  explore.py  pyproject.toml
untracked/: Notes from 01-20 mtg.md
web/: .env.example  MANUAL-TEST-PLAN.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
worker/: README.md  package.json  pnpm-lock.yaml  wrangler.toml
(+42 files in other folders)
